AWSTemplate.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: WordPress Single Instance Stack

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: EC2 KeyPair
  DBName:
    Type: String
    Default: wordpressdb
  DBUser:
    Type: String
    Default: admin
  DBPassword:
    Type: String
    NoEcho: true
    Default: MyPassword123
  InstanceType:
    Type: String
    Default: t2.micro

Resources:
  WordPressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WordPressInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c02fb55956c7d316
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref WordPressSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd php php-mysqlnd mysql-server
          systemctl start httpd
          systemctl enable httpd
          systemctl start mysqld
          systemctl enable mysqld
          mysql -e "CREATE DATABASE ${DBName};"
          mysql -e "CREATE USER '${DBUser}'@'localhost' IDENTIFIED BY '${DBPassword}';"
          mysql -e "GRANT ALL PRIVILEGES ON ${DBName}.* TO '${DBUser}'@'localhost';"
          mysql -e "FLUSH PRIVILEGES;"
          cd /var/www/html
          wget https://wordpress.org/latest.tar.gz
          tar -xzf latest.tar.gz
          cp -r wordpress/* .
          rm -rf wordpress latest.tar.gz
          cp wp-config-sample.php wp-config.php
          sed -i "s/database_name_here/${DBName}/" wp-config.php
          sed -i "s/username_here/${DBUser}/" wp-config.php
          sed -i "s/password_here/${DBPassword}/" wp-config.php
          chown -R apache:apache /var/www/html
          chmod -R 755 /var/www/html

Outputs:
  WebsiteURL:
    Value: !Sub 'http://${WordPressInstance.PublicDnsName}'
    Description: WordPress URL
